// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importer-openapi legacy converter > Snapshots legacy Postman-converter output for apis-guru.yaml 1`] = `
{
  "resources": {
    "environments": [
      {
        "id": "GENERATE_ID::ENVIRONMENT_0",
        "model": "environment",
        "name": "Global Variables",
        "parentId": null,
        "parentModel": "workspace",
        "variables": [
          {
            "name": "baseUrl",
            "value": "https://api.apis.guru/v2",
          },
          {
            "name": "api",
            "value": "<string>",
          },
          {
            "name": "provider",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
    ],
    "folders": [
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_0",
        "model": "folder",
        "name": "specs/{provider}",
        "sortPriority": 3,
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
    ],
    "httpRequests": [
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "List all APIs in the directory.
Returns links to the OpenAPI definitions for each API in the directory.
If API exist in multiple versions \`preferred\` one is explicitly marked.
Some basic info from the OpenAPI definition is cached inside each object.
This allows you to generate some simple views without needing to fetch the OpenAPI definition for each API.
",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_0",
        "method": "GET",
        "model": "http_request",
        "name": "List all APIs",
        "sortPriority": 0,
        "url": "\${[baseUrl]}/list.json",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "Some basic metrics for the entire directory.
Just stunning numbers to put on a front page and are intended purely for WoW effect :)
",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_1",
        "method": "GET",
        "model": "http_request",
        "name": "Get basic metrics",
        "sortPriority": 1,
        "url": "\${[baseUrl]}/metrics.json",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "List all the providers in the directory
",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_2",
        "method": "GET",
        "model": "http_request",
        "name": "List all providers",
        "sortPriority": 2,
        "url": "\${[baseUrl]}/providers.json",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "Returns the API entry for one specific version of an API where there is no serviceName.",
        "folderId": "GENERATE_ID::FOLDER_0",
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_3",
        "method": "GET",
        "model": "http_request",
        "name": "Retrieve one version of a particular API",
        "sortPriority": 4,
        "url": "\${[baseUrl]}/specs/:provider/\${[api]}.json",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":provider",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "Returns the API entry for one specific version of an API where there is a serviceName.",
        "folderId": "GENERATE_ID::FOLDER_0",
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_4",
        "method": "GET",
        "model": "http_request",
        "name": "Retrieve one version of a particular API with a serviceName.",
        "sortPriority": 5,
        "url": "\${[baseUrl]}/specs/:provider/:service/\${[api]}.json",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":provider",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":service",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "List all APIs in the directory for a particular providerName
Returns links to the individual API entry for each API.
",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_5",
        "method": "GET",
        "model": "http_request",
        "name": "List all APIs for a particular provider",
        "sortPriority": 6,
        "url": "\${[baseUrl]}/\${[provider]}.json",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "List all serviceNames in the directory for a particular providerName
",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_6",
        "method": "GET",
        "model": "http_request",
        "name": "List all serviceNames for a particular provider",
        "sortPriority": 7,
        "url": "\${[baseUrl]}/:provider/services.json",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":provider",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_0",
      },
    ],
    "workspaces": [
      {
        "authentication": {},
        "authenticationType": null,
        "description": "Wikipedia for Web APIs. Repository of API definitions in OpenAPI format.
**Warning**: If you want to be notified about changes in advance please join our [Slack channel](https://join.slack.com/t/mermade/shared_invite/zt-g78g7xir-MLE_CTCcXCdfJfG3CJe9qA).
Client sample: [[Demo]](https://apis.guru/simple-ui) [[Repo]](https://github.com/APIs-guru/simple-ui)


Contact Support:
 Name: APIs.guru
 Email: mike.ralphson@gmail.com",
        "id": "GENERATE_ID::WORKSPACE_0",
        "model": "workspace",
        "name": "APIs.guru",
      },
    ],
  },
}
`;

exports[`importer-openapi legacy converter > Snapshots legacy Postman-converter output for httpbin.yaml 1`] = `
{
  "resources": {
    "environments": [
      {
        "id": "GENERATE_ID::ENVIRONMENT_1",
        "model": "environment",
        "name": "Global Variables",
        "parentId": null,
        "parentModel": "workspace",
        "variables": [
          {
            "name": "baseUrl",
            "value": "https://httpbin.org",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
    ],
    "folders": [
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_1",
        "model": "folder",
        "name": "anything",
        "sortPriority": 1,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": "GENERATE_ID::FOLDER_1",
        "id": "GENERATE_ID::FOLDER_2",
        "model": "folder",
        "name": "{anything}",
        "sortPriority": 8,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_3",
        "model": "folder",
        "name": "cache",
        "sortPriority": 20,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_4",
        "model": "folder",
        "name": "cookies",
        "sortPriority": 23,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": "GENERATE_ID::FOLDER_4",
        "id": "GENERATE_ID::FOLDER_5",
        "model": "folder",
        "name": "set",
        "sortPriority": 26,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_6",
        "model": "folder",
        "name": "delay/{delay}",
        "sortPriority": 30,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_7",
        "model": "folder",
        "name": "digest-auth/{qop}/{user}/{passwd}",
        "sortPriority": 39,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": "GENERATE_ID::FOLDER_7",
        "id": "GENERATE_ID::FOLDER_8",
        "model": "folder",
        "name": "{algorithm}",
        "sortPriority": 41,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_9",
        "model": "folder",
        "name": "image",
        "sortPriority": 52,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_10",
        "model": "folder",
        "name": "redirect-to",
        "sortPriority": 65,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_11",
        "model": "folder",
        "name": "response-headers",
        "sortPriority": 74,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "folderId": null,
        "id": "GENERATE_ID::FOLDER_12",
        "model": "folder",
        "name": "status/{codes}",
        "sortPriority": 78,
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
    ],
    "httpRequests": [
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_7",
        "method": "GET",
        "model": "http_request",
        "name": "Absolutely 302 Redirects n times.",
        "sortPriority": 0,
        "url": "\${[baseUrl]}/absolute-redirect/:n",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":n",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_1",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_8",
        "method": "DELETE",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 2,
        "url": "\${[baseUrl]}/anything",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_1",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_9",
        "method": "GET",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 3,
        "url": "\${[baseUrl]}/anything",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_1",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_10",
        "method": "PATCH",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 4,
        "url": "\${[baseUrl]}/anything",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_1",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_11",
        "method": "POST",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 5,
        "url": "\${[baseUrl]}/anything",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_1",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_12",
        "method": "PUT",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 6,
        "url": "\${[baseUrl]}/anything",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_1",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_13",
        "method": "TRACE",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 7,
        "url": "\${[baseUrl]}/anything",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_2",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_14",
        "method": "DELETE",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 9,
        "url": "\${[baseUrl]}/anything/:anything",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":anything",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_2",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_15",
        "method": "GET",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 10,
        "url": "\${[baseUrl]}/anything/:anything",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":anything",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_2",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_16",
        "method": "PATCH",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 11,
        "url": "\${[baseUrl]}/anything/:anything",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":anything",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_2",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_17",
        "method": "POST",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 12,
        "url": "\${[baseUrl]}/anything/:anything",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":anything",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_2",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_18",
        "method": "PUT",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 13,
        "url": "\${[baseUrl]}/anything/:anything",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":anything",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_2",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_19",
        "method": "TRACE",
        "model": "http_request",
        "name": "Returns anything passed in request data.",
        "sortPriority": 14,
        "url": "\${[baseUrl]}/anything/:anything",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":anything",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_20",
        "method": "GET",
        "model": "http_request",
        "name": "Decodes base64url-encoded string.",
        "sortPriority": 15,
        "url": "\${[baseUrl]}/base64/:value",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":value",
            "value": "SFRUUEJJTiBpcyBhd2Vzb21l",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_21",
        "method": "GET",
        "model": "http_request",
        "name": "Prompts the user for authorization using HTTP Basic Auth.",
        "sortPriority": 16,
        "url": "\${[baseUrl]}/basic-auth/:user/:passwd",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":user",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":passwd",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_22",
        "method": "GET",
        "model": "http_request",
        "name": "Prompts the user for authorization using bearer authentication.",
        "sortPriority": 17,
        "url": "\${[baseUrl]}/bearer",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_23",
        "method": "GET",
        "model": "http_request",
        "name": "Returns Brotli-encoded data.",
        "sortPriority": 18,
        "url": "\${[baseUrl]}/brotli",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_24",
        "method": "GET",
        "model": "http_request",
        "name": "Returns n random bytes generated with given seed",
        "sortPriority": 19,
        "url": "\${[baseUrl]}/bytes/:n",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":n",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_3",
        "headers": [
          {
            "enabled": true,
            "name": "If-Modified-Since",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": "If-None-Match",
            "value": "<string>",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_25",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a 304 if an If-Modified-Since header or If-None-Match is present. Returns the same as a GET otherwise.",
        "sortPriority": 21,
        "url": "\${[baseUrl]}/cache",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_3",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_26",
        "method": "GET",
        "model": "http_request",
        "name": "Sets a Cache-Control header for n seconds.",
        "sortPriority": 22,
        "url": "\${[baseUrl]}/cache/:value",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":value",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_4",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_27",
        "method": "GET",
        "model": "http_request",
        "name": "Returns cookie data.",
        "sortPriority": 24,
        "url": "\${[baseUrl]}/cookies",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_4",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_28",
        "method": "GET",
        "model": "http_request",
        "name": "Deletes cookie(s) as provided by the query string and redirects to cookie list.",
        "sortPriority": 25,
        "url": "\${[baseUrl]}/cookies/delete",
        "urlParameters": [
          {
            "enabled": true,
            "name": "freeform",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_5",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_29",
        "method": "GET",
        "model": "http_request",
        "name": "Sets cookie(s) as provided by the query string and redirects to cookie list.",
        "sortPriority": 27,
        "url": "\${[baseUrl]}/cookies/set",
        "urlParameters": [
          {
            "enabled": true,
            "name": "freeform",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_5",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_30",
        "method": "GET",
        "model": "http_request",
        "name": "Sets a cookie and redirects to cookie list.",
        "sortPriority": 28,
        "url": "\${[baseUrl]}/cookies/set/:name/:value",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":name",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":value",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_31",
        "method": "GET",
        "model": "http_request",
        "name": "Returns Deflate-encoded data.",
        "sortPriority": 29,
        "url": "\${[baseUrl]}/deflate",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_6",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_32",
        "method": "DELETE",
        "model": "http_request",
        "name": "Returns a delayed response (max of 10 seconds).",
        "sortPriority": 31,
        "url": "\${[baseUrl]}/delay/:delay",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":delay",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_6",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_33",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a delayed response (max of 10 seconds).",
        "sortPriority": 32,
        "url": "\${[baseUrl]}/delay/:delay",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":delay",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_6",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_34",
        "method": "PATCH",
        "model": "http_request",
        "name": "Returns a delayed response (max of 10 seconds).",
        "sortPriority": 33,
        "url": "\${[baseUrl]}/delay/:delay",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":delay",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_6",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_35",
        "method": "POST",
        "model": "http_request",
        "name": "Returns a delayed response (max of 10 seconds).",
        "sortPriority": 34,
        "url": "\${[baseUrl]}/delay/:delay",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":delay",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_6",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_36",
        "method": "PUT",
        "model": "http_request",
        "name": "Returns a delayed response (max of 10 seconds).",
        "sortPriority": 35,
        "url": "\${[baseUrl]}/delay/:delay",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":delay",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_6",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_37",
        "method": "TRACE",
        "model": "http_request",
        "name": "Returns a delayed response (max of 10 seconds).",
        "sortPriority": 36,
        "url": "\${[baseUrl]}/delay/:delay",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":delay",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_38",
        "method": "DELETE",
        "model": "http_request",
        "name": "The request's DELETE parameters.",
        "sortPriority": 37,
        "url": "\${[baseUrl]}/delete",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_39",
        "method": "GET",
        "model": "http_request",
        "name": "Returns page denied by robots.txt rules.",
        "sortPriority": 38,
        "url": "\${[baseUrl]}/deny",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_7",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_40",
        "method": "GET",
        "model": "http_request",
        "name": "Prompts the user for authorization using Digest Auth.",
        "sortPriority": 40,
        "url": "\${[baseUrl]}/digest-auth/:qop/:user/:passwd",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":qop",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":user",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":passwd",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_8",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_41",
        "method": "GET",
        "model": "http_request",
        "name": "Prompts the user for authorization using Digest Auth + Algorithm.",
        "sortPriority": 42,
        "url": "\${[baseUrl]}/digest-auth/:qop/:user/:passwd/:algorithm",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":qop",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":user",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":passwd",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":algorithm",
            "value": "MD5",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "allow settings the stale_after argument.
",
        "folderId": "GENERATE_ID::FOLDER_8",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_42",
        "method": "GET",
        "model": "http_request",
        "name": "Prompts the user for authorization using Digest Auth + Algorithm.",
        "sortPriority": 43,
        "url": "\${[baseUrl]}/digest-auth/:qop/:user/:passwd/:algorithm/:stale_after",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":qop",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":user",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":passwd",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":algorithm",
            "value": "MD5",
          },
          {
            "enabled": true,
            "name": ":stale_after",
            "value": "never",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_43",
        "method": "GET",
        "model": "http_request",
        "name": "Drips data over a duration after an optional initial delay.",
        "sortPriority": 44,
        "url": "\${[baseUrl]}/drip",
        "urlParameters": [
          {
            "enabled": true,
            "name": "duration",
            "value": "2",
          },
          {
            "enabled": true,
            "name": "numbytes",
            "value": "10",
          },
          {
            "enabled": true,
            "name": "code",
            "value": "200",
          },
          {
            "enabled": true,
            "name": "delay",
            "value": "2",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_44",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a UTF-8 encoded body.",
        "sortPriority": 45,
        "url": "\${[baseUrl]}/encoding/utf8",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "If-None-Match",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": "If-Match",
            "value": "<string>",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_45",
        "method": "GET",
        "model": "http_request",
        "name": "Assumes the resource has the given etag and responds to If-None-Match and If-Match headers appropriately.",
        "sortPriority": 46,
        "url": "\${[baseUrl]}/etag/:etag",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":etag",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_46",
        "method": "GET",
        "model": "http_request",
        "name": "The request's query parameters.",
        "sortPriority": 47,
        "url": "\${[baseUrl]}/get",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_47",
        "method": "GET",
        "model": "http_request",
        "name": "Returns GZip-encoded data.",
        "sortPriority": 48,
        "url": "\${[baseUrl]}/gzip",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_48",
        "method": "GET",
        "model": "http_request",
        "name": "Return the incoming request's HTTP headers.",
        "sortPriority": 49,
        "url": "\${[baseUrl]}/headers",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_49",
        "method": "GET",
        "model": "http_request",
        "name": "Prompts the user for authorization using HTTP Basic Auth.",
        "sortPriority": 50,
        "url": "\${[baseUrl]}/hidden-basic-auth/:user/:passwd",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":user",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": ":passwd",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_50",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple HTML document.",
        "sortPriority": 51,
        "url": "\${[baseUrl]}/html",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_9",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_51",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple image of the type suggest by the Accept header.",
        "sortPriority": 53,
        "url": "\${[baseUrl]}/image",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_9",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_52",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple JPEG image.",
        "sortPriority": 54,
        "url": "\${[baseUrl]}/image/jpeg",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_9",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_53",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple PNG image.",
        "sortPriority": 55,
        "url": "\${[baseUrl]}/image/png",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_9",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_54",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple SVG image.",
        "sortPriority": 56,
        "url": "\${[baseUrl]}/image/svg",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_9",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_55",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple WEBP image.",
        "sortPriority": 57,
        "url": "\${[baseUrl]}/image/webp",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_56",
        "method": "GET",
        "model": "http_request",
        "name": "Returns the requester's IP Address.",
        "sortPriority": 58,
        "url": "\${[baseUrl]}/ip",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_57",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple JSON document.",
        "sortPriority": 59,
        "url": "\${[baseUrl]}/json",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_58",
        "method": "GET",
        "model": "http_request",
        "name": "Generate a page containing n links to other pages which do the same.",
        "sortPriority": 60,
        "url": "\${[baseUrl]}/links/:n/:offset",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":n",
            "value": "<integer>",
          },
          {
            "enabled": true,
            "name": ":offset",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_59",
        "method": "PATCH",
        "model": "http_request",
        "name": "The request's PATCH parameters.",
        "sortPriority": 61,
        "url": "\${[baseUrl]}/patch",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_60",
        "method": "POST",
        "model": "http_request",
        "name": "The request's POST parameters.",
        "sortPriority": 62,
        "url": "\${[baseUrl]}/post",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_61",
        "method": "PUT",
        "model": "http_request",
        "name": "The request's PUT parameters.",
        "sortPriority": 63,
        "url": "\${[baseUrl]}/put",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_62",
        "method": "GET",
        "model": "http_request",
        "name": "Streams n random bytes generated with given seed, at given chunk size per packet.",
        "sortPriority": 64,
        "url": "\${[baseUrl]}/range/:numbytes",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":numbytes",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_10",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_63",
        "method": "DELETE",
        "model": "http_request",
        "name": "302/3XX Redirects to the given URL.",
        "sortPriority": 66,
        "url": "\${[baseUrl]}/redirect-to",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_10",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_64",
        "method": "GET",
        "model": "http_request",
        "name": "302/3XX Redirects to the given URL.",
        "sortPriority": 67,
        "url": "\${[baseUrl]}/redirect-to",
        "urlParameters": [
          {
            "enabled": true,
            "name": "url",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": "status_code",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_10",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_65",
        "method": "PATCH",
        "model": "http_request",
        "name": "302/3XX Redirects to the given URL.",
        "sortPriority": 68,
        "url": "\${[baseUrl]}/redirect-to",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {
          "form": [
            {
              "enabled": true,
              "name": "url",
              "value": "<string>",
            },
            {
              "enabled": true,
              "name": "status_code",
              "value": "<integer>",
            },
          ],
        },
        "bodyType": "application/x-www-form-urlencoded",
        "folderId": "GENERATE_ID::FOLDER_10",
        "headers": [
          {
            "enabled": true,
            "name": "Content-Type",
            "value": "application/x-www-form-urlencoded",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_66",
        "method": "POST",
        "model": "http_request",
        "name": "302/3XX Redirects to the given URL.",
        "sortPriority": 69,
        "url": "\${[baseUrl]}/redirect-to",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {
          "form": [
            {
              "enabled": true,
              "name": "url",
              "value": "<string>",
            },
            {
              "enabled": true,
              "name": "status_code",
              "value": "<integer>",
            },
          ],
        },
        "bodyType": "application/x-www-form-urlencoded",
        "folderId": "GENERATE_ID::FOLDER_10",
        "headers": [
          {
            "enabled": true,
            "name": "Content-Type",
            "value": "application/x-www-form-urlencoded",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_67",
        "method": "PUT",
        "model": "http_request",
        "name": "302/3XX Redirects to the given URL.",
        "sortPriority": 70,
        "url": "\${[baseUrl]}/redirect-to",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_10",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_68",
        "method": "TRACE",
        "model": "http_request",
        "name": "302/3XX Redirects to the given URL.",
        "sortPriority": 71,
        "url": "\${[baseUrl]}/redirect-to",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_69",
        "method": "GET",
        "model": "http_request",
        "name": "302 Redirects n times.",
        "sortPriority": 72,
        "url": "\${[baseUrl]}/redirect/:n",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":n",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_70",
        "method": "GET",
        "model": "http_request",
        "name": "Relatively 302 Redirects n times.",
        "sortPriority": 73,
        "url": "\${[baseUrl]}/relative-redirect/:n",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":n",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_11",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_71",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a set of response headers from the query string.",
        "sortPriority": 75,
        "url": "\${[baseUrl]}/response-headers",
        "urlParameters": [
          {
            "enabled": true,
            "name": "freeform",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_11",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_72",
        "method": "POST",
        "model": "http_request",
        "name": "Returns a set of response headers from the query string.",
        "sortPriority": 76,
        "url": "\${[baseUrl]}/response-headers",
        "urlParameters": [
          {
            "enabled": true,
            "name": "freeform",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_73",
        "method": "GET",
        "model": "http_request",
        "name": "Returns some robots.txt rules.",
        "sortPriority": 77,
        "url": "\${[baseUrl]}/robots.txt",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_12",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_74",
        "method": "DELETE",
        "model": "http_request",
        "name": "Return status code or random status code if more than one are given",
        "sortPriority": 79,
        "url": "\${[baseUrl]}/status/:codes",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":codes",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_12",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_75",
        "method": "GET",
        "model": "http_request",
        "name": "Return status code or random status code if more than one are given",
        "sortPriority": 80,
        "url": "\${[baseUrl]}/status/:codes",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":codes",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_12",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_76",
        "method": "PATCH",
        "model": "http_request",
        "name": "Return status code or random status code if more than one are given",
        "sortPriority": 81,
        "url": "\${[baseUrl]}/status/:codes",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":codes",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_12",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_77",
        "method": "POST",
        "model": "http_request",
        "name": "Return status code or random status code if more than one are given",
        "sortPriority": 82,
        "url": "\${[baseUrl]}/status/:codes",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":codes",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_12",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_78",
        "method": "PUT",
        "model": "http_request",
        "name": "Return status code or random status code if more than one are given",
        "sortPriority": 83,
        "url": "\${[baseUrl]}/status/:codes",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":codes",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": "GENERATE_ID::FOLDER_12",
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_79",
        "method": "TRACE",
        "model": "http_request",
        "name": "Return status code or random status code if more than one are given",
        "sortPriority": 84,
        "url": "\${[baseUrl]}/status/:codes",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":codes",
            "value": "<string>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_80",
        "method": "GET",
        "model": "http_request",
        "name": "Streams n random bytes generated with given seed, at given chunk size per packet.",
        "sortPriority": 85,
        "url": "\${[baseUrl]}/stream-bytes/:n",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":n",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_81",
        "method": "GET",
        "model": "http_request",
        "name": "Stream n JSON responses",
        "sortPriority": 86,
        "url": "\${[baseUrl]}/stream/:n",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":n",
            "value": "<integer>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_82",
        "method": "GET",
        "model": "http_request",
        "name": "Return the incoming requests's User-Agent header.",
        "sortPriority": 87,
        "url": "\${[baseUrl]}/user-agent",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_83",
        "method": "GET",
        "model": "http_request",
        "name": "Return a UUID4.",
        "sortPriority": 88,
        "url": "\${[baseUrl]}/uuid",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "folderId": null,
        "headers": [],
        "id": "GENERATE_ID::HTTP_REQUEST_84",
        "method": "GET",
        "model": "http_request",
        "name": "Returns a simple XML document.",
        "sortPriority": 89,
        "url": "\${[baseUrl]}/xml",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_1",
      },
    ],
    "workspaces": [
      {
        "authentication": {},
        "authenticationType": null,
        "description": "A simple HTTP Request & Response Service.<br/> <br/> <b>Run locally: </b> <code>$ docker run -p 80:80 kennethreitz/httpbin</code>

Contact Support:
 Email: me@kennethreitz.org",
        "id": "GENERATE_ID::WORKSPACE_1",
        "model": "workspace",
        "name": "httpbin.org",
      },
    ],
  },
}
`;

exports[`importer-openapi legacy converter > Snapshots legacy Postman-converter output for nasa-apod.yaml 1`] = `
{
  "resources": {
    "environments": [
      {
        "id": "GENERATE_ID::ENVIRONMENT_2",
        "model": "environment",
        "name": "Global Variables",
        "parentId": null,
        "parentModel": "workspace",
        "variables": [
          {
            "name": "baseUrl",
            "value": "https://api.nasa.gov/planetary",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_2",
      },
    ],
    "folders": [],
    "httpRequests": [
      {
        "authentication": {
          "key": "\${[apiKey]}",
          "location": "query",
          "value": "api_key",
        },
        "authenticationType": "apikey",
        "body": {},
        "bodyType": null,
        "description": "Returns the picture of the day",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "application/json",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_85",
        "method": "GET",
        "model": "http_request",
        "name": "Returns images",
        "sortPriority": 0,
        "url": "\${[baseUrl]}/apod",
        "urlParameters": [
          {
            "enabled": true,
            "name": "date",
            "value": "<string>",
          },
          {
            "enabled": true,
            "name": "hd",
            "value": "<boolean>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_2",
      },
    ],
    "workspaces": [
      {
        "authentication": {},
        "authenticationType": null,
        "description": "This endpoint structures the APOD imagery and associated metadata so that it can be repurposed for other applications. In addition, if the concept_tags parameter is set to True, then keywords derived from the image explanation are returned. These keywords could be used as auto-generated hashtags for twitter or instagram feeds; but generally help with discoverability of relevant imagery

Contact Support:
 Email: evan.t.yates@nasa.gov",
        "id": "GENERATE_ID::WORKSPACE_2",
        "model": "workspace",
        "name": "APOD",
      },
    ],
  },
}
`;

exports[`importer-openapi legacy converter > Snapshots legacy Postman-converter output for xkcd.yaml 1`] = `
{
  "resources": {
    "environments": [
      {
        "id": "GENERATE_ID::ENVIRONMENT_3",
        "model": "environment",
        "name": "Global Variables",
        "parentId": null,
        "parentModel": "workspace",
        "variables": [
          {
            "name": "baseUrl",
            "value": "http://xkcd.com/",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_3",
      },
    ],
    "folders": [],
    "httpRequests": [
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "Fetch current comic and metadata.
",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "*/*",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_86",
        "method": "GET",
        "model": "http_request",
        "name": "Fetch current comic and metadata.
",
        "sortPriority": 0,
        "url": "\${[baseUrl]}/info.0.json",
        "urlParameters": [],
        "workspaceId": "GENERATE_ID::WORKSPACE_3",
      },
      {
        "authentication": {},
        "authenticationType": null,
        "body": {},
        "bodyType": null,
        "description": "Fetch comics and metadata  by comic id.
",
        "folderId": null,
        "headers": [
          {
            "enabled": true,
            "name": "Accept",
            "value": "*/*",
          },
        ],
        "id": "GENERATE_ID::HTTP_REQUEST_87",
        "method": "GET",
        "model": "http_request",
        "name": "Fetch comics and metadata  by comic id.
",
        "sortPriority": 1,
        "url": "\${[baseUrl]}/:comicId/info.0.json",
        "urlParameters": [
          {
            "enabled": true,
            "name": ":comicId",
            "value": "<number>",
          },
        ],
        "workspaceId": "GENERATE_ID::WORKSPACE_3",
      },
    ],
    "workspaces": [
      {
        "authentication": {},
        "authenticationType": null,
        "description": "Webcomic of romance, sarcasm, math, and language.",
        "id": "GENERATE_ID::WORKSPACE_3",
        "model": "workspace",
        "name": "XKCD",
      },
    ],
  },
}
`;
